<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/icon_menu_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/create_time_asc"
                android:title="@string/sort_by_create_time_asc" />
            <item
                android:id="@+id/create_time_desc"
                android:title="@string/sort_by_create_time_desc" />
            <item
                android:id="@+id/modify_time_asc"
                android:title="@string/sort_by_modify_time_asc" />
            <item
                android:id="@+id/modify_time_desc"
                android:title="@string/sort_by_modify_time_desc" />
        </menu>
    </item>

    <item
        android:id="@+id/import_tasks"
        android:title="@string/import_task"
        android:icon="@drawable/icon_menu_import"
        app:showAsAction="ifRoom" />
</menu>