<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.task.TaskView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:tabMode="scrollable" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/folder_button"
                style="@style/Theme.TouchTool.Button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/icon_folder" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasks_box"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="0dp"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/view_task_item" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bottom_bar"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="32dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/select_all_button"
                    style="@style/Theme.TouchTool.Button.Bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_all"
                    app:icon="@drawable/icon_check" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_button"
                    style="@style/Theme.TouchTool.Button.Bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete_task"
                    app:icon="@drawable/icon_delete" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/export_button"
                    style="@style/Theme.TouchTool.Button.Bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/export_task"
                    app:icon="@drawable/icon_export" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/move_button"
                    style="@style/Theme.TouchTool.Button.Bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/move_task"
                    app:icon="@drawable/icon_move" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    style="@style/Theme.TouchTool.Button.Bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    app:icon="@drawable/icon_close" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        android:src="@drawable/icon_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/paste_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="118dp"
        android:src="@drawable/icon_paste"
        android:visibility="invisible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>