<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/materialCardViewFilledStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:shapeAppearanceOverlay="@style/Theme.TouchTool.ShapeAppearance.Corner.Large">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="4dp">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/mode_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/condition_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/behavior_mode_condition"
                android:textColor="@color/container_tint_check"
                app:backgroundTint="@color/background_tint_check"
                app:icon="@drawable/icon_behavior_condition"
                app:iconTint="@color/container_tint_check"
                app:strokeWidth="0.75dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loop_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/behavior_mode_loop"
                android:textColor="@color/container_tint_check"
                app:backgroundTint="@color/background_tint_check"
                app:icon="@drawable/icon_behavior_loop"
                app:iconTint="@color/container_tint_check"
                app:strokeWidth="0.75dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/parallel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/behavior_mode_parallel"
                android:textColor="@color/container_tint_check"
                app:backgroundTint="@color/background_tint_check"
                app:icon="@drawable/icon_behavior_parallel"
                app:iconTint="@color/container_tint_check"
                app:strokeWidth="0.75dp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delay_button"
                style="@style/Theme.TouchTool.Button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="2dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/icon_action_delay" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/text_button"
                style="@style/Theme.TouchTool.Button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="2dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/icon_action_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/image_button"
                style="@style/Theme.TouchTool.Button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="2dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/icon_action_image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/touch_button"
                style="@style/Theme.TouchTool.Button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="2dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/icon_action_touch" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/color_button"
                style="@style/Theme.TouchTool.Button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="2dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/icon_action_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/input_button"
                style="@style/Theme.TouchTool.Button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="2dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/icon_action_input" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_button"
                style="@style/Theme.TouchTool.Button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="2dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/icon_action_system" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/task_button"
                style="@style/Theme.TouchTool.Button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="2dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/icon_action_task" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/float_action_item" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:stretchColumns="1">

            <TableRow
                android:id="@+id/times_row"
                android:layout_marginTop="4dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_gravity="center"
                    android:paddingStart="0dp"
                    android:paddingEnd="4dp"
                    android:text="@string/loop_times" />

                <include
                    android:id="@+id/times_include"
                    layout="@layout/float_action_text_base" />

            </TableRow>

            <TableRow android:layout_marginTop="4dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/condition_title"
                    android:layout_gravity="center"
                    android:paddingStart="0dp"
                    android:paddingEnd="4dp"
                    android:text="@string/condition_tips_for_condition" />

                <FrameLayout>

                    <include
                        android:id="@+id/number_include"
                        layout="@layout/float_action_number" />

                    <include
                        android:id="@+id/text_include"
                        layout="@layout/float_action_text"
                        android:visibility="invisible" />

                    <include
                        android:id="@+id/image_include"
                        layout="@layout/float_action_image"
                        android:visibility="invisible" />
                </FrameLayout>

                <include
                    android:id="@+id/condition_spinner"
                    layout="@layout/float_action_spinner"
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/cancel"
                app:icon="@drawable/icon_close" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/save"
                app:icon="@drawable/icon_save" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>